--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-navigation/bottom-tabs": "^6.5.20",
