--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@reduxjs/toolkit": "^2.2.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-alert-notification": "^0.4.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
